@@ -4,8 +4,12 @@ Changelog
 1.0b2 (UNRELEASED)
 -------------------
 
-- Change user action name not to clash with Plone's logi
+- Get properties from self data storage instead of relying on Session
   [erral]
+
+- Change user action name not to clash with Plone's login
+  [erral]
+
 
 1.0b1 (2012-07-13)
 -------------------
